--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    background-color: #f5f5f5;
+    margin: 0;
 }
 
 .title {
@@ -14,7 +21,7 @@ body {
     padding: 5px;
 }
 
-.bank {
+.sight {
     position: absolute;
     background-color: lightpink;
     top: 0%;
@@ -52,11 +59,100 @@ body {
     margin: 5px;
     display: inline-block;
     border-radius: 10px;
+    outline: 1px solid black;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     cursor: default;
+    width: fit-content;
+    font-size: 1.25em;
+}
+
+.word:active {
+    opacity: 100%;
+    border: 2px dashed #000;
+
 }
 
 .word:hover {
     background-color: rgb(54, 196, 243);
     outline: 2px solid black;
+}
+
+.sentence-text {
+    background-color: lightgrey;
+    display: inline-block;
+    width: 100%;
+    min-height: 10%;
+    height: fit-content;
+    position: absolute;
+    top: 50%;
+    outline: 1px solid black;  
+}
+
+.search-container {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+    text-align: center;
+}
+
+#search-box {
+    padding: 10px;
+    width: 200px;
+}
+
+#search-results {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 100%;
+    left: 25%;
+    width: 50%;
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+#search-results li {
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid #ddd;
+}
+
+#search-results li:hover {
+    background-color: #f9f9f9;
+}
+
+.trashcan-container {
+    bottom: 0;
+    left: 43%;
+    position: absolute;
+    background-color: #f4f4f4;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    cursor: pointer;
+    width: fit-content; /* Adjust the width to fit content */
+    border: 1px solid #ddd; /* Add border for visibility */
+}
+
+.trashcan-container:hover {
+    cursor: default;
+}
+
+.trashcan {
+    width: 50px;
+    height: 50px;
+
+}
+
+.trashcan:hover {
+    cursor: default;
+}
+
+.punc-container {
+    bottom: 20%;
+    left: 25%;
+    position: absolute;
 }
