--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .sight {
     position: absolute;
-    background-color: lightpink;
+    background-color: #f5f5f5;
     top: 0%;
     left: 0%;
     display: inline-block;
@@ -35,7 +35,7 @@ body {
     position: absolute;
     top: 0%;
     left: 25%;
-    background-color: lightgreen;
+    background-color: #f5f5f5;
     display: inline-block;
     width: 50%;
     height: 100%;
@@ -46,7 +46,7 @@ body {
     position: absolute;
     top: 0%;
     right: 0%;
-    background-color: rgb(250, 250, 158);
+    background-color: #f5f5f5;
     width: 25%;
     height: 100%;
     display: inline-block;
@@ -54,11 +54,11 @@ body {
 }
 
 .word {
-    background-color: rgb(107, 204, 236);
+    background-color: rgb(207, 207, 207);
     padding: 10px;
     margin: 5px;
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 4px;
     outline: 1px solid black;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     cursor: default;
@@ -122,9 +122,11 @@ body {
     background-color: #f9f9f9;
 }
 
-.trashcan-container {
+.trashcan {
+    width: 50px;
+    height: 50px;
     bottom: 0;
-    left: 43%;
+    left: 25%;
     position: absolute;
     background-color: #f4f4f4;
     text-align: center;
@@ -132,19 +134,7 @@ body {
     padding-bottom: 10px;
     padding-left: 25px;
     padding-right: 25px;
-    cursor: pointer;
-    width: fit-content; /* Adjust the width to fit content */
     border: 1px solid #ddd; /* Add border for visibility */
-}
-
-.trashcan-container:hover {
-    cursor: default;
-}
-
-.trashcan {
-    width: 50px;
-    height: 50px;
-
 }
 
 .trashcan:hover {
@@ -155,4 +145,34 @@ body {
     bottom: 20%;
     left: 25%;
     position: absolute;
+}
+
+.button {
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+
+.button:hover {
+    cursor: pointer;
+    background-color: #06d388;
+}
+
+.button:active {
+    outline: 1px solid #000;
+}
+
+#readSentence {
+    bottom: 0;
+    right: 5%;
+    position: absolute;
+    text-align: center;
+    padding: 20px 50px;
+    margin-bottom: 0%;
+    font-size: 2em;
 }
