--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@ body {
     padding: 20px;
     background-color: #f5f5f5;
     margin: 0;
+    overflow: hidden;
+    touch-action: none;
 }
 
 .title {
@@ -23,12 +25,13 @@ body {
 
 .sight {
     position: absolute;
-    background-color: #f5f5f5;
     top: 0%;
     left: 0%;
-    display: inline-block;
+    background-color: #f5f5f5;
     width: 25%;
     height: 100%;
+    display: inline-block;
+    overflow-y: auto;
 }
 
 .sentence {
@@ -36,9 +39,9 @@ body {
     top: 0%;
     left: 25%;
     background-color: #f5f5f5;
-    display: inline-block;
     width: 50%;
     height: 100%;
+    display: inline-block;
     border-left: 1px solid black;
 }
 
@@ -51,6 +54,7 @@ body {
     height: 100%;
     display: inline-block;
     border-left: 1px solid black;
+    overflow-y: auto;
 }
 
 .word {
@@ -66,14 +70,21 @@ body {
     font-size: 1.25em;
 }
 
-.word:active {
-    border: 2px dashed #000;
-
-}
-
 .word:hover {
     background-color: rgb(54, 196, 243);
     outline: 2px solid black;
+}
+
+.word:active {
+    outline: 2px dashed #000000;
+}
+
+.word.in-sentence {
+    background-color: rgb(207, 207, 207);
+}
+
+.word.in-sentence:hover {
+    background-color: rgb(54, 196, 243);
 }
 
 #sentence-text {
@@ -81,10 +92,12 @@ body {
     display: inline-block;
     width: 100%;
     min-height: 10%;
+    max-height: 30%;
+    overflow-y: auto;
     height: fit-content;
     position: absolute;
     top: 30%;
-    outline: 1px solid black;  
+    outline: 1px solid black;
 }
 
 .search-container {
@@ -122,28 +135,25 @@ body {
 }
 
 .trashcan {
-    width: 50px;
+    width: 20px;
     height: auto;
     bottom: 0;
     left: 25%;
     position: absolute;
     background-color: #f4f4f4;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 10px;
     border: 1px solid #ddd; /* Add border for visibility */
-}
-
-.trashcan:hover {
-    cursor: default;
 }
 
 .punc-container {
     bottom: 20%;
     left: 25%;
     position: absolute;
+    display: flex;
+}
+.punc-container .word {
+    font-size: 2em;
 }
 
 .button {
