--- a/css/start-style.css
+++ b/css/start-style.css
@@ -2,41 +2,54 @@ body {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
-
     font-family: 'Arial', sans-serif;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    padding-left: 40%;
-    padding-top: 20%;
     background-color: #f5f5f5;
-    margin: 0;
     overflow: hidden;
     touch-action: none;
+    height: 80vh;
 }
 
-.logo {
-    width: 500px;
-    height: auto;
+.title {
+    margin-bottom: 10%;
 }
 
-
-.button {
+.button.enabled {
     background-color: #04AA6D; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    margin: 25px;
     font-size: 16px;
-  }
+}
 
-.button:hover {
+.button.disabled {
+    background-color: #cccccc;
+    border: none;
+    color: #666666;
+    padding: 15px 32px;
+    margin: 25px;
+    font-size: 16px;
+}
+
+.button.enabled:hover {
     cursor: pointer;
     background-color: #06d388;
 }
 
-.button:active {
+.button.enabled:active {
     outline: 1px solid #000;
+}
+
+.button.disabled:hover {
+    cursor: not-allowed;
+}
+
+.name {
+    font-size: 2em;
+    color: #000;
+    text-align: center;
 }
