--- a/src/components/Words/words.css
+++ b/src/components/Words/words.css
@@ -34,9 +34,11 @@
     left: 0%;
     background-color: #f5f5f5;
     width: 25%;
+    max-width: 25%;
     height: 100%;
     display: inline-block;
     overflow-y: auto;
+    overflow-x: hidden;
   }
   
   .nouns {
