--- a/src/pages/Start/Start.css
+++ b/src/pages/Start/Start.css
@@ -1,4 +1,4 @@
-body {
+.startcontainer {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
@@ -13,7 +13,7 @@ body {
     height: 80vh;
 }
 
-.title {
+.starttitle {
     margin-bottom: 10%;
 }
 
