--- a/src/pages/Start/Start.css
+++ b/src/pages/Start/Start.css
@@ -44,6 +44,10 @@
     outline: 1px solid #000;
 }
 
+.button.disabled:active {
+    outline: none;
+}
+
 .button.disabled:hover {
     cursor: not-allowed;
 }
