--- a/src/pages/Start/Start.css
+++ b/src/pages/Start/Start.css
@@ -1,59 +1,71 @@
 .startcontainer {
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
-    font-family: 'Arial', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #f5f5f5;
-    overflow: hidden;
-    touch-action: none;
-    height: 80vh;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+  font-family: "Arial", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+  overflow: hidden;
+  touch-action: none;
+  height: 80vh;
 }
 
 .starttitle {
-    margin-bottom: 10%;
+  margin-bottom: 10%;
 }
 
 .button.enabled {
-    background-color: #04AA6D; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    margin: 25px;
-    font-size: 16px;
+  background-color: #04aa6d; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  margin: 25px;
+  font-size: 16px;
 }
 
 .button.disabled {
-    background-color: #cccccc;
-    border: none;
-    color: #666666;
-    padding: 15px 32px;
-    margin: 25px;
-    font-size: 16px;
+  background-color: #cccccc;
+  border: none;
+  color: #666666;
+  padding: 15px 32px;
+  margin: 25px;
+  font-size: 16px;
 }
 
 .button.enabled:hover {
-    cursor: pointer;
-    background-color: #06d388;
+  cursor: pointer;
+  background-color: #06d388;
 }
 
 .button.enabled:active {
-    outline: 1px solid #000;
+  outline: 1px solid #000;
 }
 
 .button.disabled:active {
-    outline: none;
+  outline: none;
 }
 
 .button.disabled:hover {
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 .name {
-    font-size: 2em;
-    color: #000;
-    text-align: center;
+  font-size: 2em;
+  color: #000;
+  text-align: center;
+}
+
+.adminbutton {
+  background-color: #ff4d4d;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.adminbutton:hover {
+  background-color: #e60000;
 }
