Words sourced from backend
words are now properly sourced from the backend, and can be updated from /admin accurately.

--- a/src/pages/Game/Game.css
+++ b/src/pages/Game/Game.css
@@ -3,7 +3,7 @@
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 
-  font-family: 'Arial', sans-serif;
+  font-family: 'Comic Sans MS', sans-serif;
   display: flex;
   justify-content: space-around;
   padding: 20px;
