--- a/src/pages/Start/Start.css
+++ b/src/pages/Start/Start.css
@@ -2,7 +2,7 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
-  font-family: "Arial", sans-serif;
+  font-family: 'Comic Sans MS', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
